Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11097

stats failovers should not have failovers in the result

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Unknown
    • June 30 - July 18

    Description

      failovers:vb_6:1:id: 108396038609207
      failovers:vb_6:1:seq: 0
      failovers:vb_6:num_entries: 2
      failovers:vb_7:0:id: 236493324210939
      failovers:vb_7:0:seq: 304
      failovers:vb_7:1:id: 257181180611241
      failovers:vb_7:1:seq: 0
      failovers:vb_7:num_entries: 2
      failovers:vb_8:0:id: 271606768266926
      failovers:vb_8:0:seq: 320
      failovers:vb_8:1:id: 118718726678388
      failovers:vb_8:1:seq: 53
      failovers:vb_8:2:id: 182751646247288
      failovers:vb_8:2:seq: 0
      failovers:vb_8:num_entries: 3
      failovers:vb_9:0:id: 79712367576878
      failovers:vb_9:0:seq: 305
      failovers:vb_9:1:id: 55325531456750
      failovers:vb_9:1:seq: 48
      failovers:vb_9:2:id: 60692566108454
      failovers:vb_9:2:seq: 0
      failovers:vb_9:num_entries: 3

      Should be:

      vb_6:1:id: 108396038609207
      vb_6:1:seq: 0
      vb_6:num_entries: 2
      vb_7:0:id: 236493324210939
      vb_7:0:seq: 304
      vb_7:1:id: 257181180611241
      vb_7:1:seq: 0
      vb_7:num_entries: 2
      vb_8:0:id: 271606768266926
      vb_8:0:seq: 320
      vb_8:1:id: 118718726678388
      vb_8:1:seq: 53
      vb_8:2:id: 182751646247288
      vb_8:2:seq: 0
      vb_8:num_entries: 3
      vb_9:0:id: 79712367576878
      vb_9:0:seq: 305
      vb_9:1:id: 55325531456750
      vb_9:1:seq: 48
      vb_9:2:id: 60692566108454
      vb_9:2:seq: 0
      vb_9:num_entries: 3

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            venu Venu Uppalapati (Inactive)
            mikew Mike Wiederhold [X] (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty