MB-11097 stats failovers should not have failovers in the result

Removed extra "failovers" string from stat failovers result.

Change-Id: I8c99b4c1d8ff97a3d779e6894aa3bbe629510ed3
Reviewed-on: http://review.couchbase.org/37482
Reviewed-by: Sriram Ganesan <sriram@couchbase.com>
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>